--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <iframe
-  src="https://www.notion.so/Portfolio-218133820d808044aa12c60af26873b2?source=copy_link"
+  src="https://spotless-offer-94b.notion.site/Portfolio-218133820d808044aa12c60af26873b2"
   width="100%"
   height="1000px"
   style="border:none;">
