--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://spotless-offer-94b.notion.site/ebd/218133820d808044aa12c60af26873b2" width="100%" height="600" frameborder="0" allowfullscreen />
+<iframe src="https://spotless-offer-94b.notion.site/ebd/218133820d808044aa12c60af26873b2" width="100%" height="100%" frameborder="0" allowfullscreen />
