--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<style>
+  @media (prefers-color-scheme: dark) {
+    :root {
+      color-scheme: light;
+    }
+  }
+</style>
 <iframe src="https://spotless-offer-94b.notion.site/ebd/218133820d808044aa12c60af26873b2" width="200%" height="200%" frameborder="0" allowfullscreen />
