--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<style>
-  @media (prefers-color-scheme: dark) {
-    :root {
-      color-scheme: light;
-    }
-  }
 
-<iframe src="https://spotless-offer-94b.notion.site/ebd/218133820d808044aa12c60af26873b2" width="200%" height="200%" frameborder="0" allowfullscreen />
-</style>
+
+<iframe src="https://sels.super.site/" width="100%" height="100%" frameborder="0" allowfullscreen />
