--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 
 
-<iframe src="https://sels.super.site/" width="100%" height="100%" frameborder="0" allowfullscreen />
+<iframe src="https://sels.super.site" width="100%" height="100%" frameborder="0" allowfullscreen />
